add border  to itmem table

--- a/inventory/templates/inventory/item_list.html
+++ b/inventory/templates/inventory/item_list.html
@@ -3,7 +3,7 @@
 {%block msg%}
 <div class="container">
     <h1>items</h1>
-<table class="table table-bordered table-hover table-dark">
+<table class="table table-bordered table-hover table-dark" border="1" width="100%">
     <thead class="table-success">
     <tr >
         <h1><th>name</th></h1>
