--- a/inventory/templates/inventory/item_detail.html
+++ b/inventory/templates/inventory/item_detail.html
@@ -4,7 +4,7 @@
     <h1>item detail</h1>
    
     
-<table class="table table-bordered table-hover table-dark">
+<table class="table table-bordered table-hover table-dark" border="1">
     <thead class="table-success">
     <tr >
         <th>name</th>
@@ -16,7 +16,7 @@
         <th>onhand stock</th>
         <th>reorder point</th>
         <th>supplier</th>
-        <th></th>
+        
         
     </tr></thead>
     
