item view detail view done

--- a/inventory/templates/inventory/item_detail.html
+++ b/inventory/templates/inventory/item_detail.html
@@ -4,7 +4,7 @@
     <h1>item detail</h1>
    
     
-<table class="table table-bordered table-hover table-dark" border="1">
+<table class="table table-bordered table-hover table-dark" border="1" width="100%">
     <thead class="table-success">
     <tr >
         <th>name</th>
