--- a/inventory/templates/inventory/item_create.html
+++ b/inventory/templates/inventory/item_create.html
@@ -1,9 +1,12 @@
 {% extends "layouts/base.html" %}
 {%block msg%}
 <h1>add item</h1>
-<form class="form-horizontal" method="post"> 
+<form method="POST"> 
+    <fieldset>
+    <legend>insert items</legend>
 {% csrf_token%}
-{% load crispy-forms_tags%}
-{% crispy_form%}
-<input type="submmit" value="submmit">
+{{form}}
+<input type="submit" value="submit">
+</fieldset>
 </form>
+{% endblock%}
