add style to inventory/forms

--- a/inventory/templates/inventory/item_create.html
+++ b/inventory/templates/inventory/item_create.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base.html" %}
 {%block msg%}
 <h1>add item</h1>
-<form method="POST"> 
+<form method="POST" style="margin-left:15px"> 
     <fieldset>
     <legend>insert items</legend>
 {% csrf_token%}
