--- a/core/templates/core/company_list.html
+++ b/core/templates/core/company_list.html
@@ -3,7 +3,7 @@
 {% extends "layouts/base.html" %}
 {%block msg%}
 <div class="container">
-    <h1>items</h1>
+    <h1>Companies</h1>
 <table class="table table-bordered table-hover table-dark" border="1" width="100%">
     <thead class="table-success">
     <tr >
