add purchaseorder interface

--- a/inventory/templates/inventory/item_form.html
+++ b/inventory/templates/inventory/item_form.html
@@ -6,7 +6,7 @@
     <legend>insert items</legend>
 {% csrf_token%}
 <table>
-{{form.as_p}}
+{{form.as_table}}
 </table>
 <input type="submit" value="submit">
 </fieldset>
