add static sidenav

--- a/inventory/templates/inventory/item_list.html
+++ b/inventory/templates/inventory/item_list.html
@@ -1,7 +1,7 @@
 
 {% extends "layouts/base.html" %}
 {%block msg%}
-<div class="container">
+<div class="container pt-4">
     <h1>items</h1>
 <table class="table table-bordered table-hover table-dark" border="1" width="100%">
     <thead class="table-success">
