--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -8,7 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+    {%include '/home/tsigu/Desktop/Project Folders/djnago_projects/myims/my_ims/templates/layouts/sidenav.html' %}
+    <div style="margin-left: 250px;">
 {%block msg%}
 {%endblock%}
+</div>
 </body>
 </html>
