add home.html file in the core and bootstrap to it

--- a/inventory/templates/inventory/item_detail.html
+++ b/inventory/templates/inventory/item_detail.html
@@ -36,6 +36,10 @@
 
 </tr>
 </table>
+<button class="btn-primary" type="button" style="text-align:right"><a href="{%url 'item_update' pk=item.id %}">Edit</a></button>
+<button class="btn-primary" type="button" style="text-align:right"><a href="{%url 'item_delete' pk=item.id %}">Delete</a></button>
+
+
 </div>
 </div>
 {% endblock%}
