--- a/templates/layouts/sidenav.html
+++ b/templates/layouts/sidenav.html
@@ -54,6 +54,7 @@
 </head>
 <body>
 <div class="sidenav">
+  <a href="{%url 'home'%}">Home</a>
   <a href="{%url 'company_list'%}">companys</a>
   <a href="{%url 'store_list'%}">stores</a>
   <a href="{%url 'item_list'%}">Items</a>
@@ -62,12 +63,5 @@
   <a href="{%url 'salesorder_list'%}">salesorders</a>
   <a href="{%url 'purchaseorder_list'%}">purchaseorders</a>
   <a href="#">Contact</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+  <a href="#">About</a> 
 </div>
