--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -1,12 +1,10 @@
-{% extends "layouts/base.html" %}
-{%block msg%}
-<h1>add store</h1>
+
+
 <form method="POST" style="margin-left:15px"> 
     <fieldset>
-    <legend>insert store</legend>
+    <legend><h1>creat account</h1></legend>
 {% csrf_token%}
 {{form.as_p}}
 <input type="submit" value="submit">
 </fieldset>
 </form>
-{% endblock%}
