--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -28,4 +28,4 @@
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p>If you have not created an account yet, then please <a href="{% url 'register' %}">sign up first</a>.</p>
