add botstrap css to home page

--- a/core/templates/core/company_list.html
+++ b/core/templates/core/company_list.html
@@ -4,7 +4,7 @@
 {%block msg%}
 <div class="container">
     <h1>Companies</h1>
-<table class="table table-bordered table-hover table-dark" border="1" width="100%">
+<table class="table table-borderless table-hover table-dark">
     <thead class="table-success">
     <tr >
         <h1><th>company-name</th></h1>
