--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,4 +1,14 @@
+<div class="bg bg-success">
 {% extends "layouts/base.html" %}
 {%block msg%}
 <h1 class="container pt-3 my-5 border bg-dark text-white">Inventory Management System</h1>
+<div class="list-group bg-success">
+<li class="list-group-item list-group-item-success list-group-item-action"><h3>number of different  items  <span class="badge rounded-pill rounded-pill bg-secondary">{{items}}</span></h3></li>
+<li class="list-group-item list-group-item-secondary list-group-item-action"><h3>number of different  customers  <span class="badge rounded-pill bg-secondary">{{customers}}</span></h3></li>
+<li class="list-group-item list-group-item-info list-group-item-action"><h3>number of different  suppliers  <span class="badge rounded-pill bg-secondary">{{suppliers}}</span></h3></li>
+<li class="list-group-item list-group-item-danger list-group-item-action"><h3>number of different  purchaseorders  <span class="badge rounded-pill bg-secondary">{{purchaseorders}}</span></h3></li>
+<li class="list-group-item list-group-item-primary list-group-item-action"><h3>number of different  salesorders  <span class="badge rounded-pill bg-secondary">{{salesorders}}</span></h3></li>
+</div>
+ssssssss
 {%endblock%}
+</div>
