--- a/inventory/templates/inventory/item_confirm_delete.html
+++ b/inventory/templates/inventory/item_confirm_delete.html
@@ -1,4 +1,9 @@
-<p>Are you shure you want to delete item {{item}}</p>
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<div class="alert alert-warning">
+    <strong>Warning!</strong> Are you shure you want to delete item {{item}}
+  </div>
 <form action="" method="POST">
     {%csrf_token%}
     
