--- a/inventory/templates/inventory/item_list.html
+++ b/inventory/templates/inventory/item_list.html
@@ -18,6 +18,6 @@
 </tr>
 {%endfor%}
 </table>
-<button class="btn-primary" type="button" style="text-align:right"><a href="{%url 'item_create'%}">Add Item</a></button>
+<a href="{%url 'item_create'%}"><button class="btn btn-outline-info" type="button" style="text-align:right">Add Item</button></a>
 </div>
 {%endblock%}
