add logut button

--- a/templates/layouts/navigation.html
+++ b/templates/layouts/navigation.html
@@ -1,5 +1,5 @@
-<ul class="nav bg-dark justify-content-end">
+<ul class="nav bg-dark justify-content-end fixed-top">
     <li class="nav-item">
-       <a class="nav-link" href="{% url 'logout'%}">logout</a>
+        <button ><a class="nav-link" href="{% url 'logout'%}">logout</a></button>
     </li>
 </ul>
