--- a/purchase/templates/purchase/purchaseorder_list.html
+++ b/purchase/templates/purchase/purchaseorder_list.html
@@ -2,7 +2,7 @@
 {%block msg%}
 <h1>purchaseorders</h1>
 <table class="table table-bordered table-hover table-dark" border="1" width="100%">
-    <tr>
+    <tr class="display-6">
         <th>purnumber</th>
         <th>item</th>
 </tr>
