--- a/sales/templates/sales/customer_list.html
+++ b/sales/templates/sales/customer_list.html
@@ -2,7 +2,7 @@
 {%block msg%}
 <h1>customers</h1>
 <table class="table table-bordered table-hover table-dark" border="1" width="100%">
-    <tr>
+    <tr class="display-6">
         <th>first name</th>
         <th>last_name</th>
 </tr>
