--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -10,7 +10,7 @@
 </head>
     {%include '/home/tsigu/Desktop/Project Folders/djnago_projects/myims/my_ims/templates/layouts/navigation.html' %}
     {%include '/home/tsigu/Desktop/Project Folders/djnago_projects/myims/my_ims/templates/layouts/sidenav.html' %}
-    <div style="margin-left: 250px;">
+    <div style="margin-left: 250px; margin-top: 50px;">
 {%block msg%}
 {%endblock%}
 </div>
