--- a/inventory/templates/inventory/item_list.html
+++ b/inventory/templates/inventory/item_list.html
@@ -18,6 +18,6 @@
 </tr>
 {%endfor%}
 </table>
-<a href="{%url 'item_create'%}"><button class="btn btn-outline-info" type="button" style="text-align:right">Add Item</button></a>
+<a href="{%url 'item_create'%}"><button style="float:right;" class="btn btn-outline-info justify-content-end" type="button" style="text-align:right">Add Item</button></a>
 </div>
 {%endblock%}
