--- a/inventory/templates/inventory/supplier_list.html
+++ b/inventory/templates/inventory/supplier_list.html
@@ -17,6 +17,6 @@
 </tr>
 {%endfor%}
 </table>
-<a href="{%url 'supplier_create'%}"><button class="btn btn-outline-info" type="button" style="text-align:right">Add Supplier</button></a>
+<a href="{%url 'supplier_create'%}"><button style="float:right;" class="btn btn-outline-info" type="button">Add Supplier</button></a>
 </div>
 {%endblock%}
