--- a/sales/templates/sales/customer_detail.html
+++ b/sales/templates/sales/customer_detail.html
@@ -18,4 +18,6 @@
 
     </tr>
 </table>
+<a href="{%url 'customer_update' pk=customer.id %}"><button class="btn btn-outline-primary" type="button" style="text-align:right">Edit</button></a>
+<a href="{%url 'customer_delete' pk=customer.id %}"><button class="btn btn-outline-danger" type="button" style="text-align:right">Delete</button></a>
 {%endblock%}
