extend base.html incompany,customer and salesorder forms

--- a/core/templates/core/company_form.html
+++ b/core/templates/core/company_form.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base.html" %}
 {%block msg%}
 <h1>add company</h1>
-<form method="POST" style="margin-left:15px"> 
+<form method="POST"> 
     <fieldset>
     <legend>insert company</legend>
 {% csrf_token%}
