--- a/sales/templates/sales/customer_form.html
+++ b/sales/templates/sales/customer_form.html
@@ -1,3 +1,5 @@
+{% extends "layouts/base.html" %}
+{%block msg%}
 <h1> add customer</h1>
 <form method="POST" >
     {%csrf_token%}
@@ -6,3 +8,4 @@
 </table>
     <input type="submit" value="submit">
 </form>
+{%endblock%}
