--- a/sales/templates/sales/salesorder_form.html
+++ b/sales/templates/sales/salesorder_form.html
@@ -1,4 +1,5 @@
-<h1> add Sales Orders</h1>
+{% extends "layouts/base.html" %}
+{%block msg%}<h1> add Sales Orders</h1>
 <form method="POST" >
     {%csrf_token%}
     <table>
@@ -6,3 +7,4 @@
 </table>
     <input type="submit" value="submit">
 </form>
+{%endblock%}
