--- a/static/css/sidenav.css
+++ b/static/css/sidenav.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Lato", sans-serif;
-    background:red;
+    background:rgb(221, 216, 216);
   }
   
   .sidenav {
@@ -29,20 +29,4 @@ body {
     color: #f1f1f1;
   }
   
-  .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-  }
   
-  #main {
-    transition: margin-left .5s;
-    padding: 16px;
-  }
-  
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
