--- a/templates/layouts/sidenav.html
+++ b/templates/layouts/sidenav.html
@@ -1,28 +1,33 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- <link rel="stylesheet" href="{%static '/css/sidenav.css'%}"> -->
 <style>
   body {
     font-family: "Lato", sans-serif;
+    background:rgb(221, 216, 216);
   }
   
   .sidenav {
-    margin-top: 40px;
     height: 100%;
-    width:250px;
+    width: 0;
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: rgb(123, 121, 148);
+    background-color: #111;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
   }
+  
   .sidenav a {
+    padding: 8px 8px 8px 32px;
     text-decoration: none;
-    color: hsl(0, 39%, 20%);
+    font-size: 25px;
+    color: #818181;
     display: block;
     transition: 0.3s;
   }
@@ -31,23 +36,6 @@
     color: #f1f1f1;
   }
   
-  .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-  }
-  
-  #main {
-    transition: margin-left .5s;
-    padding: 16px;
-  }
-  
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
 </style>
 </head>
 <body>
