--- a/static/cssfiles/sidenav.css
+++ b/static/cssfiles/sidenav.css
@@ -10,7 +10,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: rgb(123, 121, 148);
+  background-color: rgba(255,0,255,0.7);
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
